# kbdgen-archived

./: .gitignore  .rustfmt.toml  .travis.yml  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  LICENSE-MIT  MANIFEST.in  README.adoc  README.md  README.rst  azure-pipelines.yml  boolmap.py  build.rs  gen.py  global.yaml  hi.yaml  iu-cldr.yaml  kbdgen-manifest.rc  project-hi.yaml  project.yaml  pyoxidizer.bzl  pyproject.toml  requirements.txt  se-cldr-proj.yaml  se-cldr.yaml  setup.py  shell.nix  sjd.yaml  sme.yaml  softkbdgen.py
.github/workflows/: ci.yaml  release.yaml
derive-collect-docs/: Cargo.toml  Readme.adoc
derive-collect-docs/examples/: Foo.adoc  foo.rs
derive-collect-docs/src/: collect_docs.rs  lib.rs  to_adoc.rs
doc/: android.osx.md  concepts.md  modes-explained.md  windows.md
doc/files/: keyboard.md  project.md
doc/targets/: android.md  ios.md  osx.md  windows.md
docs/: convert.adoc  index.adoc  index.html  install.adoc  installation.md  intro.adoc  reference.adoc
docs/files/: index.adoc  keyboard.md  layout.adoc  project.adoc
docs/files/examples/: layout-android.yaml  layout-mac.yaml  layout-win.yaml  project.yaml
docs/targets/: android.adoc  android.md  chrome.adoc  index.adoc  ios.adoc  ios.md  m17n.adoc  macos.adoc  osx.md  svg.adoc  svg.md  windows.adoc  x11.adoc  x11.md
examples/: hi.yaml  iu-cldr.yaml  load_bundle.rs  project-hi.yaml  project.yaml  roundtrip.rs  se-cldr-proj.yaml  se-cldr-sv.yaml  se-cldr.yaml  sjd.yaml  sme.yaml
examples/sme.kbdgen/: project.yaml
examples/sme.kbdgen/layouts/: se-NO.yaml  se-SE.yaml  se.yaml
examples/sme.kbdgen/targets/: win.yaml
kbdgen/: __init__.py  __main__.py  base.py  boolmap.py  cldr.py  cli.py  global.yaml  log.py  models.py  orderedyaml.py
kbdgen-cli/: Cargo.toml
kbdgen-cli/src/: from_cldr.rs  from_xkb.rs  lib.rs  repos.rs  to_cldr.rs  to_m17n_mim.rs
kbdgen/bahkat/: __main__.py
kbdgen/bundle/: __init__.py
kbdgen/downloader/: downloader.py
kbdgen/filecache/: __init__.py  downloader.py  filecache.py
modules/language-tags/: Cargo.toml
modules/language-tags/src/: lib.rs
modules/logger/: Cargo.toml
modules/logger/src/: lib.rs
modules/reqwest/: Cargo.toml
modules/reqwest/src/: lib.rs
proto/kbdgen/: index.reproto
py-kbdgen/: README.rst  reproto.toml  setup.py
py-kbdgen/kbdgen/: __init__.py  __main__.py  base.py  boolmap.py  cldr.py  cli.py  log.py
py-kbdgen/kbdgen/filecache/: __init__.py  downloader.py
py-kbdgen/proto/kbdgen/: index.reproto
py-language-tags/: Cargo.toml
py-language-tags/src/: lib.rs
py-logger/: Cargo.toml
py-logger/src/: lib.rs
pyembed/: Cargo.toml  build.rs
pyembed/src/: importer.rs  lib.rs  pyalloc.rs  pyinterp.rs  pystr.rs
pysrc/: README.rst  setup.py
pysrc/kbdgen/: __init__.py  cli.py  log.py  models.py
pysrc/kbdgen/bundle/: __init__.py
pysrc/kbdgen/filecache/: __init__.py  downloader.py
raw/: android-glyphs-api16.txt  android-glyphs-api19.txt  android-glyphs-api21.txt  android-glyphs-api23.txt
softkbdgen/: __init__.py  __main__.py  base.py  boolmap.py  cldr.py  gen.py  global.yaml  log.py  orderedyaml.py
src/: bundle.rs  ir.rs  lib.rs  main.rs  models.rs  pad.rs  utils.rs
src/bundle/: key_map.rs  keys.rs  loading.rs  mod.rs  models.rs  modes.rs  saving.rs
src/cldr/: ir.rs  mod.rs  models.rs  ser.rs
src/cli/: from_cldr.rs  from_xkb.rs  mod.rs  repos.rs  to_cldr.rs  to_errormodel.rs  to_m17n_mim.rs  to_xkb.rs
src/m17n_mim/: Readme.md  mod.rs  ser.rs
src/xkb/: Readme.md  convert.rs  mod.rs  ser.rs
support/convertor/: index.js  package-lock.json  package.json
support/js-kbd-test/: index.html  index.js
tests/: cli.rs  load.rs
tests/fixtures/sme.kbdgen/layouts/: se-FI.yaml
tests/fixtures/sme.kbdgen/resources/mac/: readme.html
tests/fixtures/sme.kbdgen/targets/: android.yaml  ios.yaml  mac.yaml  mim.yaml
