[package]
name = "kbdgen"
version = "2.0.0-alpha.13"
authors = [
    "Brendan Molloy <brendan@bbqsrc.net>",
    "Pascal Hertleif <pascal@technocreatives.com>"
]
edition = "2018"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/divvun/kbdgen"

[dependencies]
pyembed = { version = "0.7", default-features = false, features = ["build-mode-pyoxidizer-exe", "cpython-link-unresolved-static"] }
py-language-tags = { path = "modules/language-tags" }
py-logger = { path = "modules/logger" }
py-reqwest = { path = "modules/reqwest" }

derive-collect-docs = "0.1.0"
serde = { version = "1.0.110", features = ["derive"] }
serde_yaml = { version = "0.8.9", git = "https://github.com/killercup/serde-yaml/", branch = "feature/multiline-strings" }
strum = "0.16.0"
strum_macros = "0.16.0"
log = "0.4.8"
unic-ucd-category = "0.9.0"
lazy_static = "1.4.0"
regex = "1.3.7"
unic-segment = "0.9.0"
shrinkwraprs = "0.3.0"
xml-rs = "0.8.3"
structopt = "0.3.14"
env_logger = "0.7.1"

# CLI stuff
directories = "2.0.2"
console = "0.11.3"
globwalk = "0.8.0"
serde-xml-rs = "0.4.0"
xkb-parser = "0.1"
x11-keysymdef = "0.2"
nom = "5.1.1"
chrono = "0.4.11"
thiserror = "1.0.19"
anyhow = "1.0.31"
backtrace = "0.3.48"
bigdecimal = "0.1.2"
toml = "0.5.6"
reqwest = { version = "0.10.4", default-features = false, features = ["native-tls-vendored", "gzip", "blocking"] }

[target.'cfg(windows)'.dependencies]
dialoguer = "0.5.0"

[target.'cfg(unix)'.dependencies]
skim = "0.7.0"

[dev-dependencies]
pretty_env_logger = "0.4.0"
proptest = "0.9.6"
assert_cmd = "1.0.1"
tempfile = "3.1.0"

[profile.release]
debug = true

[workspace]
members = [
    ".",
    "modules/language-tags",
    "modules/logger",
]
