[package]
name = "kbdgen"
version = "2.0.0-alpha.19"
authors = [
    "Brendan Molloy <brendan@bbqsrc.net>",
    "Pascal Hertleif <pascal@technocreatives.com>"
]
edition = "2018"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/divvun/kbdgen"

[dependencies]
derive-collect-docs = "0.1.0"
serde = { version = "1.0.110", features = ["derive"] }
serde_yaml = { git = "https://github.com/divvun/serde-yaml/", branch = "feature/multiline-strings" }
strum = "0.21.0"
strum_macros = "0.21.1"
log = "0.4.8"
unic-ucd-category = "0.9.0"
lazy_static = "1.4.0"
regex = "1.3.7"
unic-segment = "0.9.0"
shrinkwraprs = "0.3.0"
xml-rs = "0.8.3"
structopt = "0.3.14"
env_logger = "0.7.1"
tempfile = "3"

# CLI stuff
console = "0.14.1"
globwalk = "0.8.0"
serde-xml-rs = "0.4.0"
xkb-parser = "0.1"
x11-keysymdef = "0.2"
nom = "5.1.1"
chrono = "0.4.11"
thiserror = "1.0.19"
anyhow = "1.0.31"
backtrace = "0.3.48"
rust_decimal = "1.17"
toml = "0.5.6"
reqwest = { version = "0.11.3", default-features = false, features = ["rustls-tls", "gzip", "blocking"] }
pahkat-client = { git = "https://github.com/divvun/pahkat", branch = "feature/tokio-1", features = ["prefix"] }
pathos = "0.3.0-pre.3"
tokio = { version = "1.6.1", features = ["full"] }
futures = { version = "0.3.6", default-features = false, features = ["alloc"] }
zip = "0.5.13"
indexmap = "1.7.0"
once_cell = "1.8.0"
codecs = { path = "../codecs-rs" }
language-tags = { version = "0.3.2", features = ["serde"] }
iso639 = "0.1.0"

[target.'cfg(windows)'.dependencies]
dialoguer = "0.8.0"

[target.'cfg(unix)'.dependencies]
skim = "0.7.0"

[build-dependencies]
embed-resource = "1.3"

[dev-dependencies]
pretty_env_logger = "0.4.0"
proptest = "0.9.6"
assert_cmd = "1.0.1"

[profile.release]
debug = true
