[package]
name = "derive-collect-docs"
version = "0.1.0"
authors = ["Pascal Hertleif <pascal@technocreatives.com>"]
edition = "2018"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/divvun/kbdgen"

[lib]
proc-macro = true

[dependencies]
syn = "1.0.16"
quote = "1.0.3"
proc-macro2 = "1.0.9"
regex = "1.3.4"
once_cell = "1.3.1"
unindent = "0.1.5"
