[package]
name = "kbdgen-cli"
version = "0.1.0"
authors = ["Pascal Hertleif <pascal@technocreatives.com>"]
edition = "2018"

[dependencies]
kbdgen = { path = ".." }
directories = "2.0.2"
console = "0.9.1"
skim = "0.6.9"
globwalk = "0.7.1"
serde-xml-rs = "0.3.1"
structopt = "0.3.5"
snafu = "0.6.0"
log = "0.4.8"
clap-verbosity-flag = "0.3.0"
snafu-cli-debug = "0.1.1"
strum = "0.16.0"
xkb-parser = "0.1"
x11-keysymdef = "0.2"
nom = "5.0.1"
chrono = "0.4.10"
