[package]
name = "py-language-tags"
version = "0.1.0"
authors = ["Brendan Molloy <brendan@bbqsrc.net>"]
edition = "2018"

[dependencies]
language-tags = "0.2.2"

cpython = "0.5"
python3-sys = "0.5"

[features]
default = ["build-mode-extension", "cpython-link-unresolved-static"]

cpython-link-unresolved-static = [
    "cpython/py-link-mode-unresolved-static",
    "cpython/python3-sys",
    "cpython/no-auto-initialize",
]

build-mode-extension = [
    "cpython/extension-module"
]
