[package]
name = "py-reqwest"
version = "0.1.0"
authors = ["Brendan Molloy <brendan@bbqsrc.net>"]
edition = "2018"

[dependencies]
log = "0.4.11"
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls", "gzip", "blocking"] }

cpython = "0.6.0"
python3-sys = "0.6.0"

[features]
default = ["cpython/extension-module", "cpython-link-unresolved-static"]

cpython-link-unresolved-static = [
    "cpython/py-link-mode-unresolved-static",
    "cpython/python3-sys",
    "cpython/no-auto-initialize",
]